# database_SQLite

./: .gitignore  CMakeLists.txt  README.md  main.cpp
TEST/: CMakeLists.txt  TEST.cpp
src/: command.h  dataBase.cpp  dataBase.h  person.h
